tests/neg-custom-args/deprecation/manifest-summoning.scala
val foo = manifest[List[? <: Int]] // error
val bar = optManifest[Array[? <: String]] // error
